# CPractice

Stage 1/: Circle  Circle.c  Fahrenheit  Fahrenheit.c  Hello  Marathon  Marathon.c  Poem  Poem.c  Poem.txt  SphereVolume  SphereVolume.c
Stage 2/: PrintSineCosineTable  PrintSineCosineTable.c  SineCalculate  SineCalculate.txt  SineNumber  SineNumber.c  SineNumber.txt
Stage 3_CLion/: CMakeLists.txt  main.c
Stage 3_CLion/Chapter05/: 01_PointerTest.c  02_PointerTest.c  03_PointerTest.c  04_DoublePointerTest.c  05_DoublePointerTest.c
Stage 3_CLion/Projects/: ATMTest.c
